<resources>
    <!-- Generated by Automatic String Resource Translation
--><!--          https://asrt.gluege.boerde.de
-->
    <string name="app_name">Base App</string>
    <string name="toolbar_title">toolbar_titl to</string>
    <string name="hata">Error</string>
    <string name="uyari">Warning</string>
    <string name="giris">Login</string>
    <string name="beni_hatirla">Remember me</string>
    <string name="siparislerim">My Orders</string>
    <string name="cikis_yap">Log out</string>
    <string name="giris_bilgilerini_kontrol_ediniz">Your login information is incorrect, please check.</string>
    <string name="cikis_yapmak_istediginizden__">Are you sure you want to sign out?</string>
    <string name="error_message_404">The server could not be reached.</string>
    <string name="error_message_500">An error was encountered on the server side.</string>
    <string name="error_message_main">Unfortunately, an error was encountered.</string>

    <string name="ocak">January</string>
    <string name="subat">February</string>
    <string name="mart">March</string>
    <string name="nisan">April</string>
    <string name="mayis">May</string>
    <string name="haziran">June</string>
    <string name="temmuz">July</string>
    <string name="agustos">August</string>
    <string name="eylul">September</string>
    <string name="ekim">October</string>
    <string name="kasim">November</string>
    <string name="aralik">December</string>
    <string name="kullanici_adi">User name</string>
    <string name="sifre">Password</string>
    <string name="misafir">Guest</string>
    <string name="misafir_olursaniz_">The guest entry allows you to save your favorites. Therefore, it is recommended that you log in.</string>
    <string name="hosgeldiniz">Welcome</string>
    <string name="ucretsiz_yeni_uyelik">Free New Membership</string>
    <string name="sifremi_unuttum">I forgot my password</string>
    <string name="gonder">Submit</string>
    <string name="e_posta_adresinizi_girin">Enter your email address</string>
    <string name="sifrenizi_tekrar_giriniz">Your password again</string>
    <string name="sifre_degistir">Change Password</string>
    <string name="kaydet">Save</string>
    <string name="sms_kodunu_girini">Enter the code we sent via SMS.</string>
    <string name="guvenlik_kodu">Security Code</string>
    <string name="islem_basarili">Operation successful.</string>
    <string name="error_message_401">Check your login information.</string>
    <string name="vazgec">give up</string>
    <string name="tamam">OK</string>
    <string name="iptal">Cancel</string>

    <string-array name="months">
        <item>@string/ocak</item>
        <item>@string/subat</item>
        <item>@string/mart</item>
        <item>@string/nisan</item>
        <item>@string/mayis</item>
        <item>@string/haziran</item>
        <item>@string/temmuz</item>
        <item>@string/agustos</item>
        <item>@string/eylul</item>
        <item>@string/ekim</item>
        <item>@string/kasim</item>
        <item>@string/aralik</item>
    </string-array>
    <!-- Generated by Automatic String Resource Translation
    --><!--          https://asrt.gluege.boerde.de
-->
</resources>