<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handler"
            type="com.base.ui.fragment.password.renewPass.RenewPassFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_large_2"
                android:paddingTop="@dimen/space_large_2"
                android:paddingEnd="@dimen/space_large_2"
                android:paddingBottom="@dimen/space_med"
                android:src="@android:drawable/btn_star_big_on" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hosgeldiniz"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorOrange" />

            <TextView
                style="@style/TextView.Base.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large_3"
                android:text="@string/sifre_degistir" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingStart="@dimen/space_large_2"
            android:paddingEnd="@dimen/space_large_2">


            <EditText
                android:id="@+id/edtPass1"
                style="@style/EditText.Login"
                android:layout_marginTop="@dimen/space_large"
                android:hint="@string/sifre"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edtPass2"
                style="@style/EditText.Login"
                android:layout_marginTop="@dimen/space_med"
                android:hint="@string/sifrenizi_tekrar_giriniz"
                android:inputType="textPassword" />

            <Button
                style="@style/Button.Red"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/space_large_1"
                android:background="@drawable/gradient_login_button"
                android:onClick="@{() -> handler.onSendClick()}"
                android:text="@string/kaydet"
                android:textColor="@color/colotAppBlue" />
        </LinearLayout>
    </LinearLayout>

</layout>